add page icon, minor other changes

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>osu! Collab Images</title>
+  <link rel="icon" type="image/x-icon" href="icons/U+2630(pink) small.ico">
   <style>
     body {
       font-family: sans-serif;
@@ -38,7 +39,7 @@
       border: 1px solid #333;
     }
     .image-card:hover {
-      transform: translateY(-5px);
+      transform: translateY(-0px);
       box-shadow: 0 5px 15px rgba(255, 102, 170, 0.2);
       border-color: #ff66aa;
     }
