--- a/index.html
+++ b/index.html
@@ -90,6 +90,14 @@
 <body>
   <h1>osu! Collab Images</h1>
   <div class="instructions">Click on image to copy its image URL</div>
+
+  <div class="gallery">
+     <div class="image-card">
+          <div class="image-container">
+            <img src="images/9.png" alt="Collab 1">
+          </div>
+          <div class="image-title">shiori & nerissa</div>
+        </div>  
   
   <div class="gallery">
      <div class="image-card">
