--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <div class="image-container">
             <img src="images/8.png" alt="Collab 1">
           </div>
-          <div class="image-title">fubuki & okayu (ericosia & slep)</div>
+          <div class="image-title">fubuki & okayu</div>
         </div>    
     
     <div class="image-card">
@@ -117,7 +117,7 @@
      <div class="image-container">
        <img src="images/6.jpg" alt="Collab 1">
      </div>
-     <div class="image-title">fubuki & miko (ericosia & slep)</div>
+     <div class="image-title">fubuki & miko</div>
    </div>
    
    <div class="image-card">
