--- a/index.html
+++ b/index.html
@@ -92,67 +92,75 @@
   <div class="instructions">Click on image to copy its image URL</div>
 
   <div class="gallery">
+
+     <div class="image-card">
+          <div class="image-container">
+            <img src="images/10.png" alt="Collab 1">
+          </div>
+          <div class="image-title"></div>
+        </div>  
+
      <div class="image-card">
           <div class="image-container">
             <img src="images/9.png" alt="Collab 1">
           </div>
-          <div class="image-title">shiori & nerissa</div>
+          <div class="image-title"></div>
         </div>  
     
      <div class="image-card">
           <div class="image-container">
             <img src="images/8.png" alt="Collab 1">
           </div>
-          <div class="image-title">fubuki & okayu</div>
+          <div class="image-title"></div>
         </div>    
     
     <div class="image-card">
       <div class="image-container">
         <img src="images/7.jpg" alt="Collab 1">
       </div>
-      <div class="image-title">korone, okayu, mio and fubuki</div>
+      <div class="image-title"></div>
     </div>
 
     <div class="image-card">
      <div class="image-container">
        <img src="images/6.jpg" alt="Collab 1">
      </div>
-     <div class="image-title">fubuki & miko</div>
+     <div class="image-title"></div>
    </div>
    
    <div class="image-card">
      <div class="image-container">
        <img src="images/5.png" alt="Collab 1">
      </div>
-     <div class="image-title">gura & okayu</div>
+     <div class="image-title"></div>
    </div>
    
    <div class="image-card">
      <div class="image-container">
        <img src="images/4.png" alt="Collab 1">
      </div>
-     <div class="image-title">okayu & korone</div>
+     <div class="image-title"></div>
    </div>
    
    <div class="image-card">
      <div class="image-container">
        <img src="images/3.png" alt="Collab 1">
      </div>
-     <div class="image-title">korone & okayu</div>
+     <div class="image-title"></div>
    </div>
    
    <div class="image-card">
      <div class="image-container">
        <img src="images/2.png" alt="Collab 1">
      </div>
-     <div class="image-title">okayu & korone</div>
+     <div class="image-title"></div>
    </div>
    
    <div class="image-card">
      <div class="image-container">
        <img src="images/1.jpg" alt="Collab 1">
      </div>
-     <div class="image-title">kessoku band</div>
+     <div class="image-title"></div>
    </div>
    
 
