--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
      <div class="image-card">
           <div class="image-container">
-            <img src="images/10.png" alt="Collab 1">
+            <img src="images/11.png" alt="Collab 1">
           </div>
-          <div class="image-title"></div>
+          <div class="image-title">a</div>
         </div>  
 
      <div class="image-card">
