--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
       font-weight: 500;
       border-top: 1px solid #333;
     }
+
+    .image-title:empty {
+  display: none;
+}
     .copy-notification {
       position: fixed;
       top: 20px;
