--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
           <div class="image-container">
             <img src="images/11.png" alt="Collab 1">
           </div>
-          <div class="image-title">a</div>
+          <div class="image-title"></div>
         </div>  
 
      <div class="image-card">
